# powermonitor

./: .gitignore  .pre-commit-config.yaml  README.md  build_pex.sh  main.py  main_win.py  popup.py  pyproject.toml  queryhw.py  requirements.txt
macos/: send_notification.sh
powermonitor/: main.py  monitor.py  notification.py  notify_linux.py  notify_macos.py  notify_windows.py  query.py
